# BackgroundRemoval

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: Findonnxruntime.cmake  ObsPluginHelpers.cmake
data/effects/: mask_alpha_filter.effect
data/locale/: en-US.ini  es-ES.ini
packaging/: obs-background-removal.spec
scripts/: build-fedora.sh  build-rpm.sh  download-model.sh  fix-install-path.sh  inspect-model.cpp
src/: FilterData.h  background-filter.cpp  consts.h  plugin-macros.h.in  plugin-main.cpp
src/core/: image_loader.cpp  image_loader.h  mediapipe_shapes.h  onnx_model_validate.cpp  onnx_model_validate.h  tensor_utils.h
src/models/: Model.h  ModelMediapipe.h
src/obs-utils/: background-image.cpp  background-image.h  obs-utils.cpp  obs-utils.h
src/ort-utils/: ORTModelData.h  ort-session-utils.cpp  ort-session-utils.h
tests/: CMakeLists.txt  test_image_loader.cpp  test_mediapipe_shapes.cpp  test_onnx_inference.cpp  test_onnx_model_validate.cpp  test_tensor_utils.cpp
